# CMAKE_CPP_LIB_TEMPLATE

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: RunTest.yml
cmake/: Utils.cmake
include/: add.hpp
presets/: cross_mingw_presets.json  linux_gcc_presets.json  mingw_presets.json  msvc_presets.json
src/: add.cpp
test/: CMakeLists.txt  test_add.cpp
